Terminando el landing de los cursos de Platzi

--- a/platzi/css/styles.css
+++ b/platzi/css/styles.css
@@ -9,13 +9,38 @@ figure {
     margin: 0;
 }
 
+p {
+    margin: 0;
+}
+
 .hero {
     background: #23475b;
     color: white;
     padding: 32px 15px;
+    display: grid;
+    grid-template-columns: minmax(auto, 1024px);
+    justify-content: center;
 }
 
-.hero .title {
+.hero .hero-container {
+    display: grid;
+    grid-template-columns: 70px 1fr 320px;
+    grid-template-areas:    "badge  title       form"
+                            ".      description form"
+                            ".     countdown    form";
+    gap: 10px;
+}
+
+.hero .hero-container .badge {
+    grid-area: badge;
+}
+
+.hero .hero-container .badge img {
+    width: 70px;
+}
+
+.hero .hero-container .title {
+    grid-area: title;
     font-size: 36px;
     font-weight: normal;
     margin: 0;
@@ -23,14 +48,19 @@ figure {
     align-items: center;
 }
 
-.hero .form {
+.hero .hero-container .description {
+    grid-area: description;
+}
+
+.hero .hero-container .form {
+    grid-area: form;
     text-align: center;
     background: rgba(255, 255, 255, .9);
     padding: 1.5em;
     border-radius: 10px;
 }
 
-.hero .form input {
+.hero .hero-container .form input {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -40,13 +70,13 @@ figure {
     margin-bottom: 10px;
 }
 
-.hero .form p {
+.hero .hero-container .form p {
     font-size: 20px;
     color: #3a3b3f;
     margin-bottom: 1em;
 }
 
-.hero .form button {
+.hero .hero-container .form button {
     background: #98ca3f;
     color: white;
     padding: 10px 15px;
@@ -55,4 +85,38 @@ figure {
     border-bottom: 5px solid #6d932b;
     display: inline-block;
     font-size: 16px;
+}
+
+.hero .hero-container .countdown {
+    grid-area: countdown;
+}
+
+.hero .hero-container .countdown p {
+    font-size: 20px;
+    text-align: center;
+    font-weight: 300;
+}
+
+.hero .hero-container .countdown span {
+    font-size: 33px;
+}
+
+.hero .hero-container .countdown span:after {
+    content: ":";
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.hero .hero-container .countdown span:last-child:after {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .hero .hero-container {
+        grid-template-columns: 70px 1fr;
+        grid-template-areas:    "badge          title"
+                                "description    description"
+                                "form           form"
+                                "countdown      countdown";
+    }
 }
